--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@ html{line-height:1.15;}h1,li,div,ul,h2,body,p,pre{margin-left:0;}p,li,ul,h2,div,
             </path>
           </svg>
         </a>
-        <a href="https://t.me/slopanhanas" target="_blank" rel="noreferrer noopener" class="home-link1">
+        <a href="https://t.me/RoThFt" target="_blank" rel="noreferrer noopener" class="home-link1">
           <svg viewBox="0 0 1024 1024" class="home-icon06">
             <path d="M679.429 746.857l84-396c7.429-34.857-12.571-48.571-35.429-40l-493.714 190.286c-33.714 13.143-33.143 32-5.714 40.571l126.286 39.429 293.143-184.571c13.714-9.143 26.286-4 16 5.143l-237.143 214.286-9.143 130.286c13.143 0 18.857-5.714 25.714-12.571l61.714-59.429 128 94.286c23.429 13.143 40 6.286 46.286-21.714zM1024 512c0 282.857-229.143 512-512 512s-512-229.143-512-512 229.143-512 512-512 512 229.143 512 512z">
             </path>
